Deployment/arc-product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\HMaligro\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: arc-product
  name: arc-product
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: arc-product
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\HMaligro\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/deployment-default: "true"
        io.kompose.service: arc-product
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: productdb
            - name: DB_NAME
              value: product
            - name: DB_SA_PASSWORD
              value: password1234@
          image: arcproduct
          name: arc-product
          ports:
            - containerPort: 80
              hostPort: 8002
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
