Deployment/productdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\HMaligro\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: productdb
  name: productdb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: productdb
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\HMaligro\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/deployment-default: "true"
        io.kompose.service: productdb
    spec:
      containers:
        - env:
            - name: ACCEPT_EULA
              value: "Y"
            - name: SA_PASSWORD
              value: password1234@
          image: mcr.microsoft.com/mssql/server:2019-latest
          name: product-db
          ports:
            - containerPort: 1433
              hostPort: 18001
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
