Deployment/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\HMaligro\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\HMaligro\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/deployment-default: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
        - image: rabbitmq:management
          name: rabbit-mq
          ports:
            - containerPort: 15672
              hostPort: 15672
              protocol: TCP
            - containerPort: 5672
              hostPort: 5672
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
