Deployment/arc-product-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arc-product-node-port-service
spec:
  type: NodePort
  selector:
    app: arcproductservice
  ports:
    - name: arcproductservice
      protocol: TCP
      port: 80
      targetPort: 80
