Deployment/arc-userauthmanagementweb-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arc-user-auth-management-node-port-service
spec:
  type: NodePort
  selector:
    app: arcuserauthmanagement
  ports:
    - name: arcuserauthmanagement
      protocol: TCP
      port: 80
      targetPort: 80
