Deployment/arc.apigateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\HMaligro\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: arc-apigateway
  name: arc.apigateway
  namespace: default
spec:
  ports:
    - name: "8006"
      port: 8006
      targetPort: 80
  selector:
    io.kompose.service: arc-apigateway
status:
  loadBalancer: {}
