Deployment/arc.product-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\HMaligro\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: arc-product
  name: arc.product
  namespace: default
spec:
  ports:
    - name: "8002"
      port: 8002
      targetPort: 80
  selector:
    io.kompose.service: arc-product
status:
  loadBalancer: {}
