Deployment/productdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\HMaligro\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: productdb
  name: productdb
  namespace: default
spec:
  ports:
    - name: "18001"
      port: 18001
      targetPort: 1433
  selector:
    io.kompose.service: productdb
status:
  loadBalancer: {}
