Deployment/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: arc-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arcproduct-clusterip-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arcuserauthmanagement-clusterip-service
                port:
                  number: 80
